# demo-fastts

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build-release.yml  build-wheels.yml
bindings/: bind_functions.cpp
docs/: downloads.md  index.md
fastts_demo/: __init__.py  __init__.pyi  functions.pyi
headers/: functions.h
src/: functions.cpp  module.cpp
test_python/: benchmark.py
